more style fixes have issues with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   justify-content: space-between;
   flex-direction: column;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 /*----MAIN----*/
@@ -101,7 +102,12 @@ body {
   nav {
     width: 100%;
     height: 13%;
-    background-color: #E8E8E8;
+    background-color: linear-gradient(bottom top, #E8E8E8, #FFFFFF);
+    background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(top, #E8E8E8, #FFFFFF);
+    background: -o-linear-gradient(top, #E8E8E8, #FFFFFF);
+    background: -moz-linear-gradient(top, #E8E8E8, #FFFFFF);
+    background: linear-gradient(to top, #E8E8E8, #FFFFFF);
     display: flex;
     justify-content: space-between;
     align-items: center;
